--- a/reactfront/src/App.css
+++ b/reactfront/src/App.css
@@ -2,15 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo{
+  padding: 10px 50px;
+
+
 }
 
 .App-header {
@@ -36,3 +32,84 @@
     transform: rotate(360deg);
   }
 }
+/* App.css */
+.header {
+  background-color: #ffffff;
+  color: white;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  height: 60px; /* Altura fija del encabezado */
+}
+
+
+/* App.css */
+.menu-button {
+  position: fixed; /* Hace que el botón siempre esté visible en la pantalla */
+  top: 0px; /* Ajusta la posición desde la parte superior */
+  left: 10px; /* Ajusta la posición desde la izquierda */
+  z-index: 1000; /* Asegura que esté sobre otros elementos */
+  background: none;
+  border: none;
+  color: rgb(96, 94, 94);
+  font-size: 30px;
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+
+.sidebar a {
+  color: rgb(44, 44, 44); /* Color del texto */
+  text-decoration: none; /* Remover subrayado */
+  display: block; /* Hacer que los enlaces llenen el contenedor */
+  padding: 10px 15px; /* Relleno alrededor del texto */
+  border-radius: 20px; /* Bordes redondeados */
+  transition: background-color 0.3s ease; /* Transición suave del fondo */
+}
+
+.sidebar a:hover {
+  background-color: rgba(57, 57, 57, 0.2); /* Color de fondo al pasar el cursor */
+}
+/* App.css */
+.sidebar {
+  width: 200px;
+  background-color: #ffffffd9;
+  height: calc(100vh - 60px); /* Altura ajustada para no superponer el encabezado */
+  position: fixed;
+  padding: 20px;
+  top: 60px; /* Comienza justo debajo del encabezado */
+  left: 0;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+}
+
+.sidebar.open {
+  transform: translateX(0);
+}
+
+.content {
+  transition: margin-left 0.3s ease; /* Animación suave para el margen */
+  padding: 20px;
+}
+
+.content.open {
+  margin-left: 200px; /* Deja espacio para la barra lateral */
+}
+
+.content.closed {
+  margin-left: 0; /* Usa todo el ancho de la pantalla */
+}
+.sidebar ul {
+  list-style-type: none; /* Remueve los marcadores de lista */
+  padding: 0; /* Remueve el padding predeterminado */
+  margin: 0; /* Remueve el margen predeterminado */
+}
+
+.sidebar li {
+  padding: 10px 15px; /* Ajusta el padding para mejor alineamiento */
+}
+
+
