--- a/reactfront/src/App.css
+++ b/reactfront/src/App.css
@@ -51,18 +51,19 @@
   background: none;
   border: none;
   color: rgb(96, 94, 94);
-  font-size: 25px;
+  font-size: 22px;
   cursor: pointer;
-  padding: 10px 25px;
+  padding: 15px 25px;
   transition: color 0.3s ease, background-color 0.3s ease; /* Transición para el cambio de color */
+  border-radius:15px;
+
 }
 
 /* Estado hover del botón de menú */
-/*.menu-button:hover {
-  /*color: rgb(255, 255, 255); /* Color del texto al pasar el mouse */
-  /*background-color: rgba(96, 94, 94, 0.2); /* Fondo del botón al pasar el mouse */
-  /*border-radius: 50%; /* Bordes redondeados */
-/*}*/
+.menu-button:hover {
+  color: rgb(255, 255, 255); 
+  background-color: rgba(96, 94, 94, 0.2); 
+} 
 
 /* Estilos del sidebar */
 .sidebar {
@@ -166,5 +167,82 @@
 .mt-3 {
   margin-top: 1rem;
 }
+/* Estilo del botón del menú desplegable */
+.dropdown-button {
+  background: none;
+  border: none;
+  color: rgb(44, 44, 44);
+  font-weight: 600;
+  cursor: pointer;
+  width: 100%;
+  text-align: left;
+  padding: 10px 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: background-color 0.3s ease, color 0.3s ease, border-radius 0.3s ease;
+  border-radius: 20px; /* Mantén el borde redondeado siempre */
+}
+
+.dropdown-button:hover {
+  background-color: rgba(57, 57, 57, 0.2);
+}
+
+/* Estilo del menú desplegable */
+.dropdown-menu {
+  list-style-type: none;
+  padding: 0;
+  margin: 0; /* Elimina el margen que genera el recuadro */
+  display: none;
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  background-color: transparent; /* Fondo transparente */
+  box-shadow: none; /* Sin sombras */
+}
+
+/* Mostrar menú desplegable con animación */
+.dropdown-menu.show {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.dropdown-menu li {
+  margin: 5px 0;
+}
+
+.dropdown-menu li a {
+  color: rgb(44, 44, 44);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  padding: 5px 0;
+  font-weight: 500;
+}
+
+.dropdown-menu li a i {
+  margin-right: 10px;
+}
+
+.dropdown-menu li a:hover {
+  background-color: rgba(57, 57, 57, 0.2);
+  border-radius: 10px;
+  padding-left: 5px;
+}
+
+/* Eliminar el borde y el recuadro */
+.dropdown-menu {
+  border: none;
+  background-color: transparent; /* Sin fondo */
+  box-shadow: none;
+}
+
+.dropdown-menu.show {
+  padding: 0; /* Elimina el padding del menú */
+  margin: 0; /* Elimina el margen alrededor del menú */
+  box-shadow: none; /* Sin sombra */
+}
+
 
   
