--- a/reactfront/src/pages/Promocion/ShowPromocion.css
+++ b/reactfront/src/pages/Promocion/ShowPromocion.css
@@ -1,15 +1,15 @@
-.col-cedula {
+/* .col-id {
     width: 5%;
 }
 
-.col-nombres {
+.col-fecha {
     width: 20%;
 }
 
-.col-apellidos {
+.col-comentarios {
     width: 40%;
 }
 
 .col-acciones {
     width: 35%;
-}
+} */
