--- a/reactfront/src/pages/Participantes/Cursos/ShowCursos.css
+++ b/reactfront/src/pages/Participantes/Cursos/ShowCursos.css
@@ -1,25 +1,25 @@
-.col-id {
-    width: 5%;
-}
-
-.col-descripcion {
-    width: 25%;
-}
-
-.col-horas {
-    width: 15%;
-}
-
-.col-fecha {
-    width: 15%;
-}
-
-.col-costo {
+.col-cods {
     width: 10%;
 }
 
-.col-acciones {
-    width: 30%;
+.col-descripcions {
+    width: 20%;
+}
+
+.col-horass {
+    width: 10%;
+}
+
+.col-fechas {
+    width: 15%;
+}
+
+.col-costos {
+    width: 20%;
+}
+
+.col-accioness {
+    width: 20%;
 }
 .custom-width {
     width: 400px; /* Ajusta a tu necesidad */
