--- a/reactfront/src/App.css
+++ b/reactfront/src/App.css
@@ -151,6 +151,8 @@ body {
 .content {
   margin-left: 200px; /* Ajusta el margen para que el contenido no se solape con el sidebar */
   padding: 10px 30px; /* Padding del contenido principal */
+  position: relative;
+
 }
 
 
@@ -560,5 +562,22 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+/* Loader solo en el contenido */
+.loader-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semi-transparente */
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
 
 
