--- a/reactfront/src/pages/Bandeja/ShowPeticiones.css
+++ b/reactfront/src/pages/Bandeja/ShowPeticiones.css
@@ -34,6 +34,10 @@
 .blue {
     background-color: rgb(39, 87, 170);
 }
+.pink{
+
+    background-color: #fc53c4
+}
 /* En ShowPeticiones.css */
 .actions-column {
     width: 250px; /* Ajusta el ancho según tu preferencia */
